fix: fix the problem when the last card wasn't wrapped int

--- a/src/app/readyComponents/timeTracking/page.module.css
+++ b/src/app/readyComponents/timeTracking/page.module.css
@@ -152,6 +152,6 @@
   .cardWrapper {
     margin-top: 50px;
     grid-template-columns: repeat(1, 255px);
-    grid-template-rows: repeat(7, 244px);
+    grid-template-rows: repeat(8, 244px);
   }
 }
